--- a/_units/08.md
+++ b/_units/08.md
@@ -1,14 +1,15 @@
 ---
 ###
 # unit information: 
-# Unit 8: Cognitive Psychology and Music
+# Unit 8: Gestalt and Melody
 ###
 title: Cognitive Psychology and Music
 number: 8
 short_description: short description of the unit
 summary: brief summary of the unit
 authors: 
- - author 1
+ - Georg Hajdu
+ - Psyche Loui
 topics: [topic 1, topic 2]
 test_questions:
 - What are the Gestalt processes of visual perception? How do they relate to melody?
@@ -29,31 +30,17 @@ mathjax: true
 
 # Introduction
 
-What does cognitive psychology have to do with sounds and music?
+In this unit we will discuss the melody from a Gestalt perspective. Gestalt psychology is a direction within psychology that describes human perception as the ability to identify structures and principles of order in sensory information. In his 1890 article _Über Gestaltqualitäten_ (engl. On Gestalt Qualities), Austrian philosopher Christian von Ehrenfels made the claim that perception contains qualities that do not result from the arrangement of simple sensory qualities. Ehrenfels' research was the point of departure for Wertheimer, Koffka and Köhler who delevoped much of the Gestalt theory during the early 1910s in Frankfurt, Germany. 
+According to  Ehrenfels, a melody wouild be an example for such a Gestalt quality, as the tones as elements of the melody can be replaced by completely different tones, and it would still be heard as the same melody provided that the arrangement relationship between the tones is preserved.  A melody is defined as a series of pitches presented in succession. (This is in contrast to simultaneously presented pitches, which defines harmony as discussed in the next unit.) From a perceptual perspective, much of the importance of melody lies in the relationships between successive pitches in a melody, i.e. interval sizes and directions. Models of interval sizes, such as Implication Realization Model, Gap Fill, and Gestalt theories, are closely related to expectation. At a larger scale, the overall pattern of the melody, as dictated by the melodic contour, plays a crucial role in melodic perception. Knowledge in the statistical processes that generate melodies, such as Hidden Markov Models, can be useful in composition, especially given its potential in the automatic composition of large sets of melodies. 
+The combination of melodies gives rise to musical texture, and the creation of musical texture requires attention not only to each melody in itself, but to the interactions between melodies. 
 
-Long chain of stimulus processing:
+The rules of voice leading can be derived from a perceptual Texture Space, which can represent groups of melodies and generate predictions for distinct musical styles.
 
-- Generation of energy by an external object or event
-- Transmission of this energy through the space between the event and the observer
-- Recording and processing by the perceptive apparatus of the observer
-- Transmission of the signal to the brain and further processing
-- ...
-- Formation of a representation of the event in the brain
-
-Sensory information has relevance only if the brain can form a representation of the external world from it. During their processing stimuli often have little in common with what is perceived by the observer, as this is the result of further extensive processing in the brain. Regardless of the nature of the mind (eye, ear) - a topic of psychophysics and physiology - cognitive psychologists are interested in exploring the mechanisms of internal representation. The senses must come together to represent the outer world.
-An evolutionary process has shaped our cognitive processes to be automatic, immediate and efficient. We have few options to consciously influence it.
-
-Figure Table Surfaces
-
-The example shows that the internal representation of an object can differ greatly from the physical stimulus on the retina. In fact, both table surfaces (parallelograms) are identical (http://www.michaelbach.de/ot/sze_shepardTables/index.html). However, the fact that the lines are interpreted as part of a three-dimensional object creates the impression that the tables are different.
-
-In this unit we will discuss the perception and cognition of melody. 
-A melody is defined as a series of pitches presented in succession. (This is in contrast to simultaneously presented pitches, which defines harmony as discussed in the previous unit.) From a perceptual perspective, much of the importance of melody lies in the relationships between successive pitches in a melody, i.e. interval sizes and directions. Models of interval sizes, such as ImplicationRealizationModel, GapFill, and Gestalt theories, are closely related to expectation. At a larger scale, the overall pattern of the melody, as dictated by the melodic contour, plays a crucial role in melodic perception. Knowledge in the statistical processes that generate melodies, such as HiddenMarkovModels, can be useful in composition, especially given its potential in the automatic composition of large sets of melodies. 
-The combination of melodies gives rise to musical texture, and the creation of musical texture requires attention not only to each melody in itself, but to the interactions between melodies. The rules of voice leading can be derived from a perceptual TextureSpace, which can represent groups of melodies and generate predictions for distinct musical styles.
+{% include note author="vg" text="Isn't this a bit overstated?" %}
 
 # Unconscious Inference
 
-Hermann von Helmholtz (1821-1894) is considered by some to be the greatest perceptual physiologist and psychologist of all time. He coined the term Unconscious Inference. Our brain infers three-dimensional objects based on clues found in the two-dimensional patterns on the retina without any conscious effort.
+Gestalt psychology is  deeply rooted in the work of Hermann von Helmholtz (1821-1894). Helmholtz is considered by some to be the greatest perceptual physiologist and psychologist of all time. He coined the term Unconscious Inference. Our brain infers three-dimensional objects based on clues found in the two-dimensional patterns on the retina without any conscious effort.
 
 Such clues include:
 
@@ -63,34 +50,77 @@ Such clues include:
 • Binocular disparity: each of the two eyes gets a slightly different image, from which the brain can draw conclusions about the relative distance of the contained objects
 • Motion Parallax: moving the observer shifts the image on the retina. This makes it possible to draw conclusions about distances.
 
-# Constancy of Size and Loudness
+{% include img-figure url="/MUTOR/assets/images/unit8_Table_Surfaces.png" description="The shapes of the two parallograms representing the table surfaces are identical " %}
+
+The figure 8.1 shows that the internal representation of an object can differ greatly from the physical stimulus on the retina. In fact, both table surfaces (parallelograms) are identical (http://www.michaelbach.de/ot/sze_shepardTables/index.html). However, the fact that the lines are interpreted as part of a three-dimensional object creates the impression that the tables are different.
+
+# Invariance: Constancy of Size and Loudness
 The size of an object on the retina changes with the distance to the observer. Nevertheless, we have developed the ability to perceive the size of an object independently of its distance. We call this phenomenon constancy of size. When listening, we find the phenomenon of volume constancy as an analogy to size constancy.
 Example in the sound domain: The difference between quieter and farther away. The energy that an instrument emits is ideally evenly distributed over a spherical surface. As a result, the intensity reaching the listener decreases with the square of the distance. Visual Analogy: Balloon that either flies away or loses size. So we need other clues to decide about the nature of the process:
 1. When an instrument plays quietly, the tone changes noticeably
 1. Normally a sound is reflected by other objects in the room. This creates reverb, which gives information about the size of the room. When a sound is close, we hear more direct sound and little reverb that hits with a time delay. As the sound fades away, its intensity decreases and reverb increases.
 
-# Spatial and Temporal Inversion
-The perception of objects can be confusing if the spatial or temporal order is reversed, as in the case of the double faces in this image, which we interpret in a specific, fixed way (this definition takes place in early childhood). The same applies to reverberated sounds, where we first expect the sound and then virtual copies of the sound. A reversal leads to unexpected results, for example, gun shots in Georg Hajdu's opera Der Sprung.
+{% include img-figure url="/MUTOR/assets/images/unit8_Size_Constancy.png" description="We have developed the ability to perceive the size of an object independently of its distance" %}
 
-# Completion
-Completion of incomplete information (e.g., blind spot or TV noise experiments). Top-down in addition to bottom-up processes, based on experience. Computers have difficulty to deal with ambiguity for lack of visual knowledge.
+## Spatial and Temporal Inversion
+The perception of objects can be confusing if the spatial or temporal order is reversed, as in the case of the double faces in this image, which we interpret in a specific, fixed way (this definition takes place in early childhood). 
+
+{% include img-figure url="/MUTOR/assets/images/unit8_Spacial_Inversion.png" description="The perception of objects can be confusing if the spatial or temporal order is reversed" %}
+
+An example in the auditory domain would be the reversed sound of a cymbal, a familiar sonority in popular music, which has a distict quality while still betraying its origin.
+
+<html>
+  <head>
+    <title>The Auditory System</title>
+  </head>
+  <body>
+    <audio controls src="/MUTOR/assets/audios/unit8_Roland-R-8-Reverse-Cymbal.wav">
+      Your browser does not support the audio element.
+    </audio>
+  </body>
+</html>
+
+# Perceptual Completion
+Perceptual Completion of incomplete information (e.g., blind spot or TV noise experiments). Top-down in addition to bottom-up processes, based on experience. Computers have difficulty to deal with ambiguity for lack of visual knowledge.
 
 In the example on the left, as with any reason, the elongated object continues under the round disk. Even infants make such assumptions and are surprised if they do not apply.
 
-# Subjective Contour
-A similar phenomenon is the subjective contour. It is difficult not to see that white triangle, though it does not actually exist.
+{% include img-figure url="/MUTOR/assets/images/unit8_completion-1.png" description="" %}
+{% include img-figure url="/MUTOR/assets/images/unit8_completion-2.png" description="We assume objects to continue when parts of it are hidden behind another object" %}
+
+{% include note author="vg" text="We need an auditory example here: Sound-noise band-sound" %}
+
+# Reification: Subjective Contour
+A similar phenomenon is the _subjective contour_. It is difficult not to see that white triangle, though it does not actually exist. This phenomenon is related to virtual pitch, apparent in low-bandwidth phone calls and strinking pitch of bells.
+
+{% include img-figure url="/MUTOR/assets/images/unit8_Kinazsa_Triangle.png" description="" %}
+
+# Figure-Ground Organization
+
+{% include img-figure url="/MUTOR/assets/images/unit8_Dalmatian.png" description="" %}
 
 # Gestalt Laws of Grouping
-According to Max Wertheimer, the co-founder of Gestalt psychology, the brain uses the principles of Gestalt grouping of sensory stimuli to shape objects, especially if the incoming information is incomplete.
+According to the Gestalt psychologists, the brain uses the principles of Gestalt grouping of sensory stimuli to shape objects, especially if the incoming information is incomplete.
 The principles include:
-Symmetry (symmetry): a
-Similarity: b
-Proximity: c
-Closure: d
-Continuity (good continuity): e
-Common fate: f
+1. Similarity - elements that are more similar (i.e. share common features) are more likely to be grouped together.
+We perceive the white dots as one group and the pink dots as another group; this illustrates grouping by similarity of colour.
+{% include img-figure url="/MUTOR/assets/images/unit8_Dalmatian.png" description="" %}
+1. Symmetry - symmetrical figures are perceived as being grouped together.
+ The pair of shapes on the left is more likely to be perceived as a group compared to the pair on the right; this is because the left pair is symmetrical around the dotted line whereas the right pair is asymmetrical. 
+ {% include img-figure url="/MUTOR/assets/images/unit8_Dalmatian.png" description="" %}
+1. Proximity - elements that are close together are more likely to be grouped together.
+The dots that are closer together are perceived as being grouped together.
+{% include img-figure url="/MUTOR/assets/images/unit8_Dalmatian.png" description="" %}
+1. Good continuation - we tend to perceive figures as being continuous.
+ The red diagonal is perceived as one line instead of two, due to the principle of good continuation.
+{% include img-figure url="/MUTOR/assets/images/unit8_Dalmatian.png" description="" %}
+1. Closure - we tend to see complete figures despite missing parts.
+{% include img-figure url="/MUTOR/assets/images/unit8_Dalmatian.png" description="" %}
+1. Common fate - elements that change similarly over time tend to be grouped together. 
+{% include img-figure url="/MUTOR/assets/images/unit8_Dalmatian.png" description="" %}
 
 # Melody
+
 ## MelodicContour
 
 Contour generally refers to the pattern of directions for pitch intervals. The series of upward and downward pitch intervals can be represented as patterns of transitions between notes. Thus, in the following example of a melody from Joplin's The Entertainer:
@@ -117,6 +147,14 @@ Intervallic Difference – small intervals imply similar-sized intervals; large 
 Registral Return – intervals imply similarly sized intervals in the opposite direction  (image source: Krumhansl, 1995)
 Proximity – realized intervals should be no larger than a perfect 4th.
 Closure – realized intervals tend to smaller and in the opposite direction than implied intervals.  (image source: Krumhansl, 1995)
+
+## Gap Fill
+Gap fill was first proposed by von Hippel & Huron (1998) as a parsimonious account for interval sizes and directions in melodies. The basic principle of gap fill states that large intervals in a melody imply smaller intervals in the opposite direction. 
+ An illustration of gap fill processes. 
+
+Countless famous musical examples can illustrate the gap fill principle. For instance, the tune of "My Bonnie lies over the ocean" contains a large intervallic leap upwards between "my" and "Bonnie", followed by small steps downwards in "-nie lies over the ocean." 
+
+The idea of gap fill most closely borrows from Gestalt theories in perception, which are a set of theories on how units are perceived as a whole. The Gestalt principles of similarity, proximity, good continuation, symmetry, and closure (Wertheimer?), originally used in vision, are important also for perceiving melodies as holistic, unified objects.
 
 ## Hidden Markov Models
 
