--- a/_units/08.md
+++ b/_units/08.md
@@ -104,10 +104,10 @@ According to the Gestalt psychologists, the brain uses the principles of Gestalt
 The principles include:
 1. Similarity - elements that are more similar (i.e. share common features) are more likely to be grouped together.
 We perceive the white dots as one group and the pink dots as another group; this illustrates grouping by similarity of colour.
-{% include img-figure url="/MUTOR/assets/images/unit8_Dalmatian.png" description="" %}
+{% include img-figure url="/MUTOR/assets/images/unit8_Gestalt_similarity.png" description="" %}
 1. Symmetry - symmetrical figures are perceived as being grouped together.
  The pair of shapes on the left is more likely to be perceived as a group compared to the pair on the right; this is because the left pair is symmetrical around the dotted line whereas the right pair is asymmetrical. 
- {% include img-figure url="/MUTOR/assets/images/unit8_Dalmatian.png" description="" %}
+ {% include img-figure url="/MUTOR/assets/images/unit8_Gestalt_proximity.png" description="" %}
 1. Proximity - elements that are close together are more likely to be grouped together.
 The dots that are closer together are perceived as being grouped together.
 {% include img-figure url="/MUTOR/assets/images/unit8_Dalmatian.png" description="" %}
@@ -115,9 +115,9 @@ The dots that are closer together are perceived as being grouped together.
  The red diagonal is perceived as one line instead of two, due to the principle of good continuation.
 {% include img-figure url="/MUTOR/assets/images/unit8_Dalmatian.png" description="" %}
 1. Closure - we tend to see complete figures despite missing parts.
-{% include img-figure url="/MUTOR/assets/images/unit8_Dalmatian.png" description="" %}
+{% include img-figure url="/MUTOR/assets/images/unit8_Gestalt_closure.png" description="" %}
 1. Common fate - elements that change similarly over time tend to be grouped together. 
-{% include img-figure url="/MUTOR/assets/images/unit8_Dalmatian.png" description="" %}
+<iframe width="718" height="474" src="MUTOR/assets/images/unit8_Common-Fate.mov" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 # Melody
 
