--- a/_units/08.md
+++ b/_units/08.md
@@ -3,7 +3,7 @@
 # unit information: 
 # Unit 8: Gestalt and Melody
 ###
-title: Cognitive Psychology and Music
+title: Gestalt and Melody
 number: 8
 short_description: short description of the unit
 summary: brief summary of the unit
