--- a/_units/08.md
+++ b/_units/08.md
@@ -123,7 +123,7 @@ The dots that are closer together are perceived as being grouped together.
 {% include img-figure url="/MUTOR/assets/images/unit8_Gestalt_closure.png" description="" %}
 ## Common fate
 - elements that change similarly over time tend to be grouped together. 
-<iframe width="718" height="474" src="MUTOR/assets/videos/unit8_Common-Fate.mov" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="718" height="474" src="https://github.com/MUTOR-2/MUTOR/blob/master/assets/videos/unit8_Common-Fate.mov" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 # Melody
 
