--- a/_units/08.md
+++ b/_units/08.md
@@ -125,6 +125,9 @@ The dots that are closer together are perceived as being grouped together.
 - elements that change similarly over time tend to be grouped together. 
 <iframe width="718" height="474" src="https://github.com/MUTOR-2/MUTOR/raw/master/assets/videos/unit8_Common-Fate.mov" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
+![]({MUTOR-2/MUTOR/raw/master/assets/videos/unit8_Common-Fate.mov})
+![Test]({MUTOR-2/MUTOR/raw/master/assets/videos/unit8_Common-Fate.mov})
+
 # Melody
 
 ## MelodicContour
