--- a/_units/08.md
+++ b/_units/08.md
@@ -30,7 +30,7 @@ mathjax: true
 
 # Introduction
 
-In this unit we will discuss melody from a Gestalt perspective. Gestalt psychology is a direction within psychology that describes human perception as the ability to identify structures and principles of order in sensory information. In his 1890 article _Über Gestaltqualitäten_ (engl. On Gestalt Qualities), Austrian philosopher Christian von Ehrenfels made the claim that perception contains qualities that do not result from the arrangement of simple sensory qualities. Ehrenfels' research was the point of departure for Wertheimer, Koffka and Köhler who outlined Gestalt theory during the early 1910s while working at the Frankfurt university. 
+In this unit we will discuss melody from a Gestalt perspective. Gestalt psychology is a direction within psychology that describes human perception as the ability to identify structures and principles of order in sensory information. In his 1890 article _Über Gestaltqualitäten_ (engl. _On Gestalt Qualities_), Austrian philosopher Christian von Ehrenfels made the claim that perception contains qualities that do not result from the arrangement of simple sensory qualities. Ehrenfels' research was the point of departure for Wertheimer, Koffka and Köhler who outlined Gestalt theory during the early 1910s while working at the Frankfurt university. 
 According to  Ehrenfels, a melody wouild be an example for such a Gestalt quality, as the tones as elements of the melody can be replaced by completely different tones, and it would still be heard as the same melody provided that the arrangement relationship between the tones is preserved.  A melody is defined as a series of pitches presented in succession. (This is in contrast to simultaneously presented pitches, which defines harmony as discussed in the next unit.) From a perceptual perspective, much of the importance of melody lies in the relationships between successive pitches in a melody, i.e. interval sizes and directions. Models of interval sizes, such as Implication Realization Model, Gap Fill, and Gestalt theories, are closely related to expectation. At a larger scale, the overall pattern of the melody, as dictated by the melodic contour, plays a crucial role in melodic perception. Knowledge in the statistical processes that generate melodies, such as Hidden Markov Models, can be useful in composition, especially given its potential in the automatic composition of large sets of melodies. 
 The combination of melodies gives rise to musical texture, and the creation of musical texture requires attention not only to each melody in itself, but to the interactions between melodies. 
 
@@ -40,7 +40,7 @@ The rules of voice leading can be derived from a perceptual Texture Space, which
 
 # Unconscious Inference
 
-Gestalt psychology is  deeply rooted in the work of Hermann von Helmholtz (1821-1894). Helmholtz is considered by some to be the greatest perceptual physiologist and psychologist of all time. He coined the term Unconscious Inference. Our brain infers three-dimensional objects based on clues found in the two-dimensional patterns on the retina without any conscious effort.
+Gestalt psychology is  deeply rooted in the work of Hermann von Helmholtz (1821-1894) who, by some, is considered to be the greatest perceptual physiologist and psychologist of all time. He coined the term Unconscious Inference. Our brain infers three-dimensional objects based on clues found in the two-dimensional patterns on the retina without any conscious effort.
 
 Such clues include:
 
