--- a/_units/08.md
+++ b/_units/08.md
@@ -36,7 +36,7 @@ The combination of melodies gives rise to musical texture, and the creation of m
 
 The rules of voice leading can be derived from a perceptual Texture Space, which can represent groups of melodies and generate predictions for distinct musical styles.
 
-{% include note author="vg" text="Isn't this a bit overstated?" %}
+{% include note author="gh" text="Isn't this a bit overstated?" %}
 
 # Unconscious Inference
 
