--- a/_units/08.md
+++ b/_units/08.md
@@ -50,7 +50,7 @@ Such clues include:
 • Binocular disparity: each of the two eyes gets a slightly different image, from which the brain can draw conclusions about the relative distance of the contained objects
 • Motion Parallax: moving the observer shifts the image on the retina. This makes it possible to draw conclusions about distances.
 
-{% include img-figure url="/MUTOR/assets/images/unit8_Table_Surfaces.png" description="The shapes of the two parallograms representing the table surfaces are identical " %}
+{% include img-figure url="/MUTOR/assets/images/unit8_Table_Surfaces.png" description="The two parallograms representing the table surfaces are rotationally symmetric" %}
 
 The figure 8.1 shows that the internal representation of an object can differ greatly from the physical stimulus on the retina. In fact, both table surfaces (parallelograms) are identical (http://www.michaelbach.de/ot/sze_shepardTables/index.html). However, the fact that the lines are interpreted as part of a three-dimensional object creates the impression that the tables are different.
 
