--- a/_units/08.md
+++ b/_units/08.md
@@ -136,40 +136,84 @@ The dots that are closer together are perceived as being grouped together.
 
 # Melody
 
-## MelodicContour
+## Melodic Contour
 
 Contour generally refers to the pattern of directions for pitch intervals. The series of upward and downward pitch intervals can be represented as patterns of transitions between notes. Thus, in the following example of a melody from Joplin's The Entertainer:
 
+{% include img-figure url="/MUTOR/assets/images/unit8_entertainer.png" description="Score of the Entertainer" %}
+
 In this melody, each interval can be represented as its direction - up, down, or same. The series of interval directions are:
+
+{% include img-figure url="/MUTOR/assets/images/unit8_entertainer2.png" description="Interval Directions" %}
 
 Thus, the contour of the Entertainer melody can be represented as:
 
+{% include img-figure url="/MUTOR/assets/images/unit8_entertainer3.png" description="Contour" %}
+
 Contour is shown to be very important to the perception of melody. Deutsch (2003) demonstrates that when the contour of a melody is intact, melodies can be heard even if the pitches themselves are incorrect. (This explains why a tune is often still recognizable even when performed grossly out of tune.) If the contour is disrupted, then the melodic recognition is impaired, even when the pitch classes are retained. 
 The following demonstration (from Deutsch's 2003 CD Musical Illusions and Paradoxes) illustrates the importance of melodic contour. In the first sound file, a familiar melody is played in the correct pitch classes but in scrambled octaves, such that the melodic contour is disrupted. Can you recognize the melody? 
- Scrambled melody (source: http://www.philomel.com/) 
-Original, unscrambled melody (source: http://www.philomel.com/) (source: http://www.philomel.com/)
+
+<html>
+  <head>
+    <title>Scrambled melody</title>
+  </head>
+  <body>
+    <audio controls src="/MUTOR/assets/audios/unit8_deutsch_scr.wav">
+      Your browser does not support the audio element.
+    </audio>
+  </body>
+</html>
+Scrambled melody (source: http://www.philomel.com/) 
+
+<html>
+  <head>
+    <title>unscrambled melody</title>
+  </head>
+  <body>
+    <audio controls src="/MUTOR/assets/audios/unit8_deutsch_un.wav">
+      Your browser does not support the audio element.
+    </audio>
+  </body>
+</html>
+Original, unscrambled melody (source: http://www.philomel.com/)
 
 ## Implication Realization Model
 
-Narmour's Implication Realization Model (1989, 1990) provides a set of predictions for melodic structure. In particular, the IR model looks at interval sizes and directions between notes of a melody. In the IR model, when given three notes making two intervals, the first interval is defined as the Implication interval, whereas the second interval is the Realization interval. 
- Definitions of the IR model. 
-The space of all possible pairs of Implied and Realized intervals. Implied intervals, with possible sizes ranging from 0 (same note) to 11 semitones (major seventh) are plotted on the Y axis. Realized intervals, ranginng from 12 semitones in a different direction to 12 semitones in the same direction, are plotted on the X axis. Each possible IR pair can be represented as a square in the grid. 
- (image source: Krumhansl, 1995) 
+Eugene Narmour's Implication Realization Model (1989, 1990) provides a set of predictions for melodic structure. In particular, the I-R model looks at interval sizes and directions between notes of a melody. 
+(PDF) Simplifying the Implication-Realization Model of Melodic Expectancy. Available from: https://www.researchgate.net/publication/230746009_Simplifying_the_Implication-Realization_Model_of_Melodic_Expectancy [accessed Aug 30 2020].
+In the I-R model, when given three notes making two intervals, the first interval is defined as the Implication interval, whereas the second interval is the Realization interval.  
 
-The IR model predicts these melodic principles (based on Krumhansl, 1995): 
-Registral Direction – small implication intervals are followed by realization intervals in the same direction; large implication intervals are followed by realization intervals in the opposite direction
-Intervallic Difference – small intervals imply similar-sized intervals; large intervals imply smaller intervals
-Registral Return – intervals imply similarly sized intervals in the opposite direction  (image source: Krumhansl, 1995)
-Proximity – realized intervals should be no larger than a perfect 4th.
-Closure – realized intervals tend to smaller and in the opposite direction than implied intervals.  (image source: Krumhansl, 1995)
+In general, the I-R principles successfully predicted response patterns, which did not differ as a function of musical style, formal musical training, or cultural background. In short, the results were consistent with Narmour's claim of innate influences on melodic expectancies.  
 
-## Gap Fill
-Gap fill was first proposed by von Hippel & Huron (1998) as a parsimonious account for interval sizes and directions in melodies. The basic principle of gap fill states that large intervals in a melody imply smaller intervals in the opposite direction. 
- An illustration of gap fill processes. 
+{% include img-figure url="/MUTOR/assets/images/unit8_ir.gif" description="Implication and Realization Intervals" %}
+
+### Definitions of the IR model
+
+The space of all possible pairs of Implied and Realized intervals. Implied intervals, with possible sizes ranging from 0 (same note) to 11 semitones (major seventh) are plotted on the Y axis. Realized intervals, ranging from 12 semitones in a different direction to 12 semitones in the same direction, are plotted on the X axis. Each possible I-R pair can be represented as a square in the grid. 
+
+{% include img-figure url="/MUTOR/assets/images/unit8_ir1.gif" description=" (image source: Krumhansl, 1995) " %}
+
+Narmour's I-R model predicts these melodic principles: 
+1. Registral Direction – small implication intervals are followed by realization intervals in the same direction; large   implication intervals are followed by realization intervals in the opposite direction
+1. Intervallic Difference – small intervals imply similar-sized intervals; large intervals imply smaller intervals
+1. Registral Return – intervals imply similarly sized intervals in the opposite direction  
+1. Proximity – realized intervals should be no larger than a perfect 4th.
+1. Closure – realized intervals tend to smaller and in the opposite direction than implied intervals.
+
+Schellenberg (1997) has shown via principle component analysis that only two principle to sufficiantly describe listeners' expectations:
+1. Pitch-Proximity - this principle states that when listeners hear an implicative interval in a melody, they expect the  next tone to be proximate in pitch to the second tone of the implicative interval
+1. Pitch-Reversal - this principle claims that listeners often expect the next tone to be proximate in pitch to the tone that preceded the most recently heard tone. In other words, listeners often expect the second tone of a realized interval to be proximate to the first tone of the implicative interval.
+
+{% include img-figure url="/MUTOR/assets/images/unit8_I-R_new.png" description="Quantification of principles of the revised two-factor model of the implication-realization model" %}
+
+#### Gap Fill
+Gap fill was first proposed by Leonard B. Meyer in 1973 (von Hippel & Huron, 1998). The basic principle of gap fill states that large intervals in a melody imply smaller intervals in the opposite direction. Schellenberg demonstrates that gap-fill is the logical outcome when a melody violates the pitch-proximity principle is  and thus Pitch-Reversal 
+
+{% include img-figure url="/MUTOR/assets/images/unit8_gap_fill.gif" description="An illustration of gap fill processes." %}
 
 Countless famous musical examples can illustrate the gap fill principle. For instance, the tune of "My Bonnie lies over the ocean" contains a large intervallic leap upwards between "my" and "Bonnie", followed by small steps downwards in "-nie lies over the ocean." 
 
-The idea of gap fill most closely borrows from Gestalt theories in perception, which are a set of theories on how units are perceived as a whole. The Gestalt principles of similarity, proximity, good continuation, symmetry, and closure (Wertheimer?), originally used in vision, are important also for perceiving melodies as holistic, unified objects.
+The idea of gap fill most closely borrows from Gestalt theories in perception, which are a set of theories on how units are perceived as a whole. The Gestalt principles of similarity, proximity, good continuation, symmetry, and closure, originally used in vision, are important also for perceiving melodies as holistic, unified objects.
 
 ## Hidden Markov Models
 
