--- a/_units/08.md
+++ b/_units/08.md
@@ -191,7 +191,7 @@ In general, the I-R principles successfully predicted response patterns, which d
 
 The space of all possible pairs of Implied and Realized intervals. Implied intervals, with possible sizes ranging from 0 (same note) to 11 semitones (major seventh) are plotted on the Y axis. Realized intervals, ranging from 12 semitones in a different direction to 12 semitones in the same direction, are plotted on the X axis. Each possible I-R pair can be represented as a square in the grid. 
 
-{% include img-figure url="/MUTOR/assets/images/unit8_ir1.png" description=" (image source: Krumhansl, 1995) " %}
+{% include img-figure url="/MUTOR/assets/images/unit8_ir1.png" description="A grid representing possible combinations of implicatove and realized intervals" %}
 
 Narmour's I-R model predicts these melodic principles: 
 1. Registral Direction – small implication intervals are followed by realization intervals in the same direction; large   implication intervals are followed by realization intervals in the opposite direction
