--- a/_units/08.md
+++ b/_units/08.md
@@ -200,14 +200,14 @@ Narmour's I-R model predicts these melodic principles:
 1. Proximity – realized intervals should be no larger than a perfect 4th.
 1. Closure – realized intervals tend to smaller and in the opposite direction than implied intervals.
 
-Schellenberg (1997) has shown via principle component analysis that only two principle to sufficiantly describe listeners' expectations:
+Schellenberg (1997) has shown via principle component analysis that only two principles are necessary to sufficiently describe listeners' expectations of melodic continuation:
 1. Pitch-Proximity - this principle states that when listeners hear an implicative interval in a melody, they expect the  next tone to be proximate in pitch to the second tone of the implicative interval
 1. Pitch-Reversal - this principle claims that listeners often expect the next tone to be proximate in pitch to the tone that preceded the most recently heard tone. In other words, listeners often expect the second tone of a realized interval to be proximate to the first tone of the implicative interval.
 
 {% include img-figure url="/MUTOR/assets/images/unit8_I-R_new.png" description="Quantification of principles of the revised two-factor model of the implication-realization model" %}
 
 #### Gap Fill
-Gap fill was first proposed by Leonard B. Meyer in 1973 (von Hippel & Huron, 1998). The basic principle of gap fill states that large intervals in a melody imply smaller intervals in the opposite direction. Schellenberg demonstrates that gap-fill is the logical outcome when a melody violates the pitch-proximity principle is  and thus Pitch-Reversal 
+Gap fill was first proposed by Leonard B. Meyer in 1973 (von Hippel & Huron, 1998). The basic principle of gap fill states that large intervals in a melody imply smaller intervals in the opposite direction. Schellenberg demonstrates that gap-fill is the logical outcome when a melody violates the pitch-proximity principle and pitch-reversal is applied.
 
 {% include img-figure url="/MUTOR/assets/images/unit8_gap_fill.gif" description="An illustration of gap fill processes." %}
 
