--- a/_units/08.md
+++ b/_units/08.md
@@ -233,13 +233,13 @@ Download melody transition matrix here
 The combination of melodic material gives rise to musical texture. Huron (1989) proposes a two-dimenisonal space for musical texture, where the x-axis represents semblant motion whereas the y-axis represents onset asynchrony. 
  Texture space for melodies.
 Here are some examples of the way melodies fit in each corner of the texture space:
-1. high semblant motion, high onset synchrony (e..g monody)
+1. high semblant motion, high onset synchrony (e..g Gregorian chant)
 
 2. high semblant motion, low onset synchrony (e.g. a chorale)
 
 3. low semblant motion, high onset synchrony (e.g. a canon)
 
-4. low semblant motion, low onset synchrony (e.g. polyphony)
+4. low semblant motion, low onset synchrony (e.g. a quadruple fugue)
 
 To fit all four kinds of melodic textures onto the texture space:
 
