--- a/_units/08.md
+++ b/_units/08.md
@@ -204,7 +204,7 @@ Schellenberg (1997) has shown via principle component analysis that only two pri
 1. Pitch-Proximity - this principle states that when listeners hear an implicative interval in a melody, they expect the  next tone to be proximate in pitch to the second tone of the implicative interval
 1. Pitch-Reversal - this principle claims that listeners often expect the next tone to be proximate in pitch to the tone that preceded the most recently heard tone. In other words, listeners often expect the second tone of a realized interval to be proximate to the first tone of the implicative interval.
 
-{% include img-figure url="/MUTOR/assets/images/unit8_I-R_new.png" description="Quantification of principles of the revised two-factor model of the implication-realization model. Because larger intervals are assigned higher values, __negative__ associations between the principle and expectancydata are expected" %}
+{% include img-figure url="/MUTOR/assets/images/unit8_I-R_new.png" description="Quantification of principles of the revised two-factor model of the implication-realization model. Because larger intervals are assigned higher values, negative associations between the principle and expectancydata are expected" %}
 
 #### Gap Fill
 Gap fill was first proposed by Leonard B. Meyer in 1973 (von Hippel & Huron, 1998). The basic principle of gap fill states that large intervals in a melody imply smaller intervals in the opposite direction. Schellenberg demonstrates that gap-fill is the logical outcome when a melody violates the pitch-proximity principle and pitch-reversal is applied.
