--- a/_units/08.md
+++ b/_units/08.md
@@ -6,7 +6,7 @@
 title: Gestalt and Melody
 number: 8
 short_description: short description of the unit
-summary: brief summary of the unit
+summary: In this unit we have looked at several perceptual principles which give rise to our experience of melody and melodic processes. The melodic processes we discussed include interval sizes and melodic contour. The Implication-Realization Model, the gap fill principle, and the Gestalt processes of visual perception are all good predictors of the way melodies tend to unfold. Statistical models also play an important role in our understanding and production of melody. Melodies can be modeled as a Hidden Markov Model, or a chain of conditional probabilities. With a matrix that dictates transitions between melodic intervals, we can generate many interesting melodies with predetermined characteristics. Texture arises from the confluence of multiple melodies. The axes of texture space can be defined as onset synchrony and semblant motion, and the resulting figure enables the differentiation between musical styles.
 authors: 
  - Georg Hajdu
  - Psyche Loui
@@ -187,14 +187,14 @@ In general, the I-R principles successfully predicted response patterns, which d
 
 {% include img-figure url="/MUTOR/assets/images/unit8_ir.gif" description="Implication and Realization Intervals" %}
 
-### Definitions of the IR model
+### Definitions of the I-R model
 
 The space of all possible pairs of Implied and Realized intervals. Implied intervals, with possible sizes ranging from 0 (same note) to 11 semitones (major seventh) are plotted on the Y axis. Realized intervals, ranging from 12 semitones in a different direction to 12 semitones in the same direction, are plotted on the X axis. Each possible I-R pair can be represented as a square in the grid. 
 
 {% include img-figure url="/MUTOR/assets/images/unit8_ir1.png" description="A grid representing possible combinations of implicatove and realized intervals" %}
 
 Narmour's I-R model predicts these melodic principles: 
-1. Registral Direction – small implication intervals are followed by realization intervals in the same direction; large   implication intervals are followed by realization intervals in the opposite direction
+1. Registral Direction – small implication intervals are followed by realization intervals in the same direction; large implication intervals are followed by realization intervals in the opposite direction
 1. Intervallic Difference – small intervals imply similar-sized intervals; large intervals imply smaller intervals
 1. Registral Return – intervals imply similarly sized intervals in the opposite direction  
 1. Proximity – realized intervals should be no larger than a perfect 4th.
@@ -215,42 +215,60 @@ Countless famous musical examples can illustrate the gap fill principle. For ins
 
 The idea of gap fill most closely borrows from Gestalt theories in perception, which are a set of theories on how units are perceived as a whole. The Gestalt principles of similarity, proximity, good continuation, symmetry, and closure, originally used in vision, are important also for perceiving melodies as holistic, unified objects.
 
+Demonstration from ASA CD: Segregation Of A Melody From Interfering Tones This demo shows the principle of proximity: pitches close together in register tend to be grouped together.
+<html>
+  <head>
+    <title>unscrambled melody</title>
+  </head>
+  <body>
+    <audio controls src="/MUTOR/assets/audios/unit8_05-Segregation-Of-A-Melody-From-Interfering-Tones.mp3">
+      Your browser does not support the audio element.
+    </audio>
+  </body>
+</html>
+
 ## Hidden Markov Models
 
 A melody can be generated using a Hidden Markov Model (HMM). An HMM is a chain of sequential probabilities. Each node in a Markov model occurs with a certain probability, and predicts each of the other nodes connected to it with a certain probability. 
 An example of a Hidden Markov Model can be used to predict weather:
- (image source: here)
+
+{% include img-figure url="/MUTOR/assets/images/unit8_hmm-weather.jpg" description="A Hidden Markov Model used to predict weather (image source: http://www.cs.wisc.edu/~noto/cs540/homework/homework5/homework5.soln.html)" %}
+
 A graph of an HMM is shown above. The model predicts the weather of each day given the previous day. We can see that according to this model, the probability that a day is sunny given that the previous day is also sunny is 0.8, the probability of a foggy day given to the previous foggy day is 0.5, and the probability that a rainy day is followed by another rainy day is 0.6. Each weather state also predicts each other weather state, with lower probabilities. 
 Adapted to music, HMMs can be used to generate melodies. Each interval can be a predictor of the next interval, as specified in gap fill and the IR model. 
- (image source: here)
+
+{% include img-figure url="/MUTOR/assets/images/unit8_hmm.gif" description="A Hidden Markov Model used to predict weather (image source: http://www.dlib.org/dlib/february02/birmingham/birmingham-appendix2.html)" %}
 
 The following interactive example is a matrix of transitions between intervals in a melody. The melody transitions matrix below generates a melody from a Hidden Markov Model:
 
-Download melody transition matrix here
+{% include img-figure url="/MUTOR/assets/images/unit8_meltrans_patch.png" description="Screenshot of a Max patches implementing a melody transition matrix" %}
+
+{% include note author="gh" text="This calls for a new solution. Besides, the transition-formatter is missing anyway" %}
 
 ## Texture Space
 
-The combination of melodic material gives rise to musical texture. Huron (1989) proposes a two-dimenisonal space for musical texture, where the x-axis represents semblant motion whereas the y-axis represents onset asynchrony. 
- Texture space for melodies.
+The combination of melodic material gives rise to musical texture. Huron (1989) proposes a two-dimensional space for musical texture, where the x-axis represents semblant motion whereas the y-axis represents onset asynchrony. 
+
 Here are some examples of the way melodies fit in each corner of the texture space:
 1. high semblant motion, high onset synchrony (e..g Gregorian chant)
+{% include img-figure url="/MUTOR/assets/images/unit8_texture-1.png" description="Monody" %}
 
 2. high semblant motion, low onset synchrony (e.g. a chorale)
+{% include img-figure url="/MUTOR/assets/images/unit8_texture-2.png" description="Homophony" %}
 
 3. low semblant motion, high onset synchrony (e.g. a canon)
+{% include img-figure url="/MUTOR/assets/images/unit8_texture-3.png" description="Heterophony" %}
 
 4. low semblant motion, low onset synchrony (e.g. a quadruple fugue)
+{% include img-figure url="/MUTOR/assets/images/unit8_texture-4.png" description="Polyphony" %}
 
 To fit all four kinds of melodic textures onto the texture space:
 
+{% include img-figure url="/MUTOR/assets/images/unit8_texture-space.png" description="Texture Space" %}
+
 This texture space may be used to predict different musical styles. Different genres of music tend to occupy distinct areas of texture space, as shown below:
-(image source: http://music-cog.ohio-state.edu/Huron/Publications/huron.voice.leading.html)
 
-# Summary
-
-In this unit we have looked at several perceptual principles which give rise to our experience of melody and melodic processes. The melodic processes we discussed include interval sizes and melodic contour. The Implication-Realization Model, the gap fill principle, and the Gestalt processes of visual perception are all good predictors of the way melodies tend to unfold.
-Statistical models also play an important role in our understanding and production of melody. Melodies can be modeled as a Hidden Markov Model, or a chain of conditional probabilities. With a matrix that dictates transitions between melodic intervals, we can generate many interesting melodies with predetermined characteristics. 
-Texture arises from the confluence of multiple melodies. The axes of texture space can be defined as onset synchrony and semblant motion, and the resulting figure enables the differentiation between musical styles.
+{% include img-figure url="/MUTOR/assets/images/unit8_texturespace.gif" description="Various Musical Genres projected onto Texture Space (image source: http://music-cog.ohio-state.edu/Huron/Publications/huron.voice.leading.html)" %}
 
 # References
 
